--- a/dq_environment.yml
+++ b/dq_environment.yml
@@ -1,12 +1,25 @@
 name: dq
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - bzip2=1.0.6=h14c3975_1002
+  - ca-certificates=2018.11.29=ha4d7672_0
+  - certifi=2018.11.29=py37_1000
+  - jupyter_contrib_core=0.3.3=py_2
+  - jupyter_contrib_nbextensions=0.5.1=py37_0
+  - jupyter_highlight_selected_word=0.2.0=py37_1000
+  - jupyter_latex_envs=1.4.4=py37_1000
+  - jupyter_nbextensions_configurator=0.4.1=py37_0
+  - libxslt=1.1.32=h4785a14_1002
+  - lxml=4.3.0=py37h23eabaa_1000
+  - openssl=1.0.2p=h14c3975_1002
+  - python=3.7.1=hd21baee_1000
+  - pyyaml=3.13=py37h14c3975_1001
+  - yaml=0.1.7=h14c3975_1001
   - backcall=0.1.0=py37_0
   - blas=1.0=mkl
   - bleach=3.0.2=py37_0
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.11.29=py37_0
   - cycler=0.10.0=py37_0
   - dbus=1.13.2=h714fa37_1
   - decorator=4.3.0=py37_0
@@ -55,7 +68,6 @@ dependencies:
   - notebook=5.7.2=py37_0
   - numpy=1.15.4=py37h7e9f1db_0
   - numpy-base=1.15.4=py37hde5b4d6_0
-  - openssl=1.1.1a=h7b6447c_0
   - pandas=0.23.4=py37h04863e7_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
@@ -70,11 +82,10 @@ dependencies:
   - pygments=2.2.0=py37_0
   - pyparsing=2.3.0=py37_0
   - pyqt=5.9.2=py37h05f1152_2
-  - python=3.7.1=h0371630_7
   - python-dateutil=2.7.5=py37_0
   - pytz=2018.7=py37_0
   - pyzmq=17.1.2=py37h14c3975_0
-  - qt=5.9.7=h5867ecd_1
+  - qt=5.9.6=h8703b6f_2
   - qtconsole=4.4.3=py37_0
   - readline=7.0=h7b6447c_5
   - send2trash=1.5.0=py37_0
