--- a/environment_no_builds.yml
+++ b/environment_no_builds.yml
@@ -9,9 +9,9 @@ dependencies:
   - ca-certificates=2018.12.5
   - certifi=2018.11.29
   - cycler=0.10.0
-  - dbus=1.13.2
+  - dbus=1.13.6
   - decorator=4.3.0
-  - entrypoints=0.2.3
+  - entrypoints=0.3
   - expat=2.2.6
   - fontconfig=2.13.0
   - freetype=2.9.1
@@ -25,12 +25,12 @@ dependencies:
   - ipython=7.2.0
   - ipython_genutils=0.2.0
   - ipywidgets=7.4.2
-  - jedi=0.13.1
+  - jedi=0.13.2
   - jinja2=2.10
   - jpeg=9b
   - jsonschema=2.6.0
   - jupyter=1.0.0
-  - jupyter_client=5.2.3
+  - jupyter_client=5.2.4
   - jupyter_console=6.0.0
   - jupyter_contrib_core=0.3.3
   - jupyter_contrib_nbextensions=0.5.1
@@ -39,23 +39,23 @@ dependencies:
   - jupyter_latex_envs=1.4.4
   - jupyter_nbextensions_configurator=0.4.1
   - kiwisolver=1.0.1
-  - libedit=3.1.20170329
+  - libedit=3.1.20181209
   - libffi=3.2.1
   - libgcc-ng=8.2.0
   - libgfortran-ng=7.3.0
-  - libpng=1.6.35
+  - libpng=1.6.36
   - libsodium=1.0.16
   - libstdcxx-ng=8.2.0
   - libuuid=1.0.3
   - libxcb=1.13
-  - libxml2=2.9.8
-  - libxslt=1.1.32
+  - libxml2=2.9.9
+  - libxslt=1.1.33
   - lxml=4.3.0
   - markupsafe=1.1.0
   - matplotlib=3.0.2
   - mistune=0.8.4
   - mkl=2019.1
-  - mkl_fft=1.0.6
+  - mkl_fft=1.0.10
   - mkl_random=1.0.2
   - nbconvert=5.3.1
   - nbformat=4.4.0
@@ -64,7 +64,7 @@ dependencies:
   - numpy=1.15.4
   - numpy-base=1.15.4
   - openssl=1.1.1a
-  - pandas=0.23.4
+  - pandas=0.24.0
   - pandoc=2.2.3.2
   - pandocfilters=1.4.2
   - parso=0.3.1
@@ -72,26 +72,26 @@ dependencies:
   - pexpect=4.6.0
   - pickleshare=0.7.5
   - pip=18.1
-  - prometheus_client=0.4.2
+  - prometheus_client=0.5.0
   - prompt_toolkit=2.0.7
   - ptyprocess=0.6.0
-  - pygments=2.2.0
-  - pyparsing=2.3.0
+  - pygments=2.3.1
+  - pyparsing=2.3.1
   - pyqt=5.9.2
-  - python=3.7.1
+  - python=3.7.2
   - python-dateutil=2.7.5
-  - pytz=2018.7
+  - pytz=2018.9
   - pyyaml=3.13
   - pyzmq=17.1.2
   - qt=5.9.7
   - qtconsole=4.4.3
   - readline=7.0
-  - scipy=1.1.0
+  - scipy=1.2.0
   - send2trash=1.5.0
-  - setuptools=40.6.2
+  - setuptools=40.6.3
   - sip=4.19.8
   - six=1.12.0
-  - sqlite=3.25.3
+  - sqlite=3.26.0
   - terminado=0.8.1
   - testpath=0.4.2
   - tk=8.6.8
@@ -103,7 +103,7 @@ dependencies:
   - widgetsnbextension=3.4.2
   - xz=5.2.4
   - yaml=0.1.7
-  - zeromq=4.2.5
+  - zeromq=4.3.1
   - zlib=1.2.11
-prefix: /home/johannes/anaconda3/envs/dq
-
+  - pip:
+    - bleach==3.0.2
